[gd_scene load_steps=22 format=2]

[ext_resource path="res://HUD/Number.tscn" type="PackedScene" id=1]
[ext_resource path="res://utils/Word.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD/fonts.png" type="Texture" id=3]
[ext_resource path="res://HUD/Right_Arrow.png" type="Texture" id=4]
[ext_resource path="res://HUD/Left_Arrow.png" type="Texture" id=5]
[ext_resource path="res://scripts/OptionsPanel.gd" type="Script" id=6]
[ext_resource path="res://Sounds/Pickup_Coin4.wav" type="AudioStream" id=7]
[ext_resource path="res://HUD/SoundEffect.gd" type="Script" id=8]
[ext_resource path="res://Music/Music.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.270588, 0.243137, 0.219608, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 7, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 14, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 21, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 28, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 35, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 42, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 49, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 56, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 63, 0, 7, 7 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "counting",
"speed": 5.0
} ]

[node name="OptionsPanel" type="Panel"]
pause_mode = 2
margin_left = 331.0
margin_top = 147.0
margin_right = 707.0
margin_bottom = 405.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 2 )]
position = Vector2( 186.622, 24.8829 )
scale = Vector2( 2, 2 )
word = "Options"

[node name="SoundVolume" parent="." instance=ExtResource( 2 )]
position = Vector2( 186.673, 80.7071 )
word = "Sound VOlume"

[node name="SoundNumber" parent="SoundVolume" instance=ExtResource( 1 )]
position = Vector2( -3.84448, 29.8787 )
scale = Vector2( 3, 3 )
frames = SubResource( 12 )

[node name="Right_Volume" type="TextureButton" parent="SoundVolume"]
anchor_top = -0.0178571
anchor_bottom = -0.0178571
margin_left = 25.4485
margin_top = 17.8787
margin_right = 65.4485
margin_bottom = 57.8787
rect_scale = Vector2( 0.66, 0.66 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left_Volume" type="TextureButton" parent="SoundVolume"]
margin_left = -53.8445
margin_top = 17.8787
margin_right = -13.8445
margin_bottom = 57.8787
rect_scale = Vector2( 0.66, 0.66 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" parent="." instance=ExtResource( 2 )]
position = Vector2( 184.552, 147.172 )
word = "Music Volume"

[node name="MusicNumber" parent="MusicVolume" instance=ExtResource( 1 )]
position = Vector2( -0.30896, 32.7071 )
scale = Vector2( 3, 3 )
frames = SubResource( 12 )

[node name="Right_Volume" type="TextureButton" parent="MusicVolume"]
anchor_top = -0.0178571
anchor_bottom = -0.0178571
margin_left = 29.691
margin_top = 20.7071
margin_right = 69.691
margin_bottom = 60.7071
rect_scale = Vector2( 0.66, 0.66 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left_Volume" type="TextureButton" parent="MusicVolume"]
margin_left = -50.309
margin_top = 20.7071
margin_right = -10.309
margin_bottom = 60.7071
rect_scale = Vector2( 0.66, 0.66 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 86, 230 )
word = "Resolution"

[node name="Label" type="Label" parent="Resolution"]
margin_left = 52.0
margin_top = 26.4054
margin_right = 150.0
margin_bottom = 40.4054
text = "1024 x 600"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right_Resoluton" type="TextureButton" parent="Resolution"]
anchor_top = -0.0178571
anchor_bottom = -0.0178571
margin_left = 158.0
margin_top = 20.0
margin_right = 198.0
margin_bottom = 60.0
rect_scale = Vector2( 0.66, 0.66 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left_Resolution" type="TextureButton" parent="Resolution"]
margin_left = 15.0
margin_top = 20.0
margin_right = 55.0
margin_bottom = 60.0
rect_scale = Vector2( 0.66, 0.66 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" parent="." instance=ExtResource( 2 )]
position = Vector2( 182.467, 228.586 )
scale = Vector2( 0.66, 0.66 )
word = "Return"

[node name="Button" type="Button" parent="Return"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -57.7115
margin_top = -12.0714
margin_right = 61.2885
margin_bottom = 16.9286
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
script = ExtResource( 8 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
script = ExtResource( 9 )
[connection signal="pressed" from="SoundVolume/Right_Volume" to="." method="sound_up"]
[connection signal="pressed" from="SoundVolume/Left_Volume" to="." method="sound_down"]
[connection signal="pressed" from="MusicVolume/Right_Volume" to="." method="music_up"]
[connection signal="pressed" from="MusicVolume/Left_Volume" to="." method="music_down"]
[connection signal="pressed" from="Return/Button" to="." method="exit_menu"]
